--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -1,5 +1,14 @@
 {
   "name": "w02e02-data-manipulation",
   "version": "1.0.0",
-  "dependencies": {}
+  "type": "module",
+  "scripts": {
+    "start": "(start npm run api && start npm run dev) || (npm run api & npm run dev)",
+    "api": "json-server -w src/data/orders/orders.fake-data.json",
+    "dev": "vite"
+  },
+  "devDependencies": {
+    "json-server": "^0.17.0",
+    "vite": "^3.1.4"
+  }
 }
