--- a/week-2-wide-perspective/w02e03-pagination-problem/package.json
+++ b/week-2-wide-perspective/w02e03-pagination-problem/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "lodash": "^4.17.21",
-    "lowdb": "^3.0.0"
+    "lowdb": "^3.0.0",
+    "prettier": "^2.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
