--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -1,5 +1,18 @@
 {
   "name": "w02e02-data-manipulation",
   "version": "1.0.0",
-  "dependencies": {}
+  "author": "Dariusz Gala",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "db:start": "json-server --watch src/server/database.json"
+  },
+  "devDependencies": {
+    "axios": "1.1.2",
+    "json-server": "0.17.0",
+    "nodemon": "2.0.20",
+    "vite": "3.1.7"
+
+  },
+  "type": "module"
 }
