--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -11,8 +11,9 @@
     "axios": "1.1.2",
     "json-server": "0.17.0",
     "nodemon": "2.0.20",
+    "rxjs": "7.5.7",
+    "uuid": "9.0.0",
     "vite": "3.1.7"
-
   },
   "type": "module"
 }
