--- a/week-2-wide-perspective/w02e05-simple-server-side/package.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/package.json
@@ -1,6 +1,33 @@
 {
   "name": "w02e05-simple-server-side",
+  "type": "module",
   "version": "1.0.0",
+  "scripts": {
+    "start": "env-cmd nodemon --delay 500ms src/main.ts",
+    "migrate": "prisma migrate dev",
+    "seed": "prisma db seed"
+  },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/node-jose": "^1.1.10",
+    "bcrypt": "^5.1.0",
+    "env-cmd": "^10.1.0",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.14.2",
+    "jose": "^4.10.0",
+    "typescript": "^4.8.4",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.3",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.4.0",
+    "ts-node": "^10.9.1"
+  },
+  "prisma": {
+    "seed": "ts-node --esm prisma/seed.ts"
   }
 }
