--- a/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
+++ b/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
@@ -1,5 +1,20 @@
 {
   "name": "w02e04-dungeons-and-the-princess",
   "version": "1.0.0",
-  "dependencies": {}
+  "type": "module",
+  "scripts": {
+    "build": "ts-node --experimental-specifier-resolution=node --esm src/main.ts"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.40.0",
+    "eslint": "8.25.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard-with-typescript": "23.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.3.0",
+    "eslint-plugin-promise": "6.1.0",
+    "prettier": "2.7.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4"
+  }
 }
