--- a/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
+++ b/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "ts-node --experimental-specifier-resolution=node --esm src/main.ts"
+    "start": "ts-node --experimental-specifier-resolution=node --esm src/main.ts",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.40.0",
@@ -15,6 +16,7 @@
     "eslint-plugin-promise": "6.1.0",
     "prettier": "2.7.1",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "vitest": "0.24.1"
   }
 }
