--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -1,5 +1,17 @@
 {
   "name": "w02e02-data-manipulation",
   "version": "1.0.0",
-  "dependencies": {}
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "fake-server:start": "json-server --watch ./src/server.js"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "axios": "^1.1.3",
+    "json-server": "^0.17.0",
+    "rxjs": "^7.5.7",
+    "vite": "^3.1.8"
+  }
 }
