--- a/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
+++ b/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
@@ -1,5 +1,11 @@
 {
   "name": "w02e04-dungeons-and-the-princess",
   "version": "1.0.0",
-  "dependencies": {}
+  "scripts": {
+    "start": "ts-node ./src/main.ts"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
 }
