--- a/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
+++ b/week-2-wide-perspective/w02e04-dungeons-and-the-princess/package.json
@@ -5,14 +5,15 @@
     "dev": "nodemon src/main.ts",
     "build": "tsc",
     "build:vite": "vite build",
-    "test": "jest"
+    "test": "vitest run --coverage"
   },
   "devDependencies": {
+    "@vitest/coverage-c8": "^0.24.3",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
-    "vitest": "^0.24.3",
     "vite": "^2.9.15",
-    "vite-plugin-node": "^1.0.0"
+    "vite-plugin-node": "^1.0.0",
+    "vitest": "^0.24.3"
   }
 }
