--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -10,5 +10,8 @@
     "parcel": "^2.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "rxjs": "^7.5.7"
   }
 }
