--- a/week-2-wide-perspective/w02e05-simple-server-side/package.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "dependencies": {
     "@prisma/client": "^4.4.0",
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
