--- a/week-2-wide-perspective/w02e05-simple-server-side/tsconfig.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/tsconfig.json
@@ -4,6 +4,8 @@
     "outDir": "dist",
     "strict": true,
     "lib": ["esnext"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
