--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -6,12 +6,14 @@
     "build": "parcel build index.html"
   },
   "devDependencies": {
+    "@types/ramda": "^0.28.16",
     "nodemon": "^2.0.20",
     "parcel": "^2.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "ramda": "^0.28.0",
     "rxjs": "^7.5.7"
   }
 }
