--- a/week-2-wide-perspective/w02e05-simple-server-side/package.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node ./src/app",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/**",
+    "db-init": "prisma migrate dev "
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -15,7 +17,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-joi-validation": "^5.0.1",
+    "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
+    "pino": "^8.6.1",
+    "pino-pretty": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0"
   },
@@ -36,6 +42,7 @@
     "prettier": "2.7.1",
     "prisma": "^4.4.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
 }
