--- a/week-2-wide-perspective/w02e05-simple-server-side/tsconfig.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/tsconfig.json
@@ -7,9 +7,6 @@
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "typeRoots": [
-      "@types",
-      "./node_modules/@types",
-    ]  
-  },
+    "typeRoots": ["@types", "./node_modules/@types"]
+  }
 }
