--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -1,5 +1,12 @@
 {
   "name": "w01e04-light-me-up",
   "version": "1.0.0",
-  "dependencies": {}
+  "scripts": {
+    "dev": "vite dev",
+    "prod": "vite build"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.3",
+    "vite": "3.1.3"
+  }
 }
