--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -2,11 +2,13 @@
   "name": "w01e04-light-me-up",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite dev",
-    "prod": "vite build"
+    "excercise1": "nodemon src/e1.ts",
+    "build": "tsc"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
-    "vite": "3.1.3"
+    "vite": "^2.9.15"
   }
 }
