--- a/week-2-wide-perspective/w02e05-simple-server-side/package.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/package.json
@@ -1,6 +1,31 @@
 {
   "name": "w02e05-simple-server-side",
   "version": "1.0.0",
+  "scripts": {
+    "start": "nodemon src/app.ts",
+    "dev": "node src/app.ts",
+    "seed": "ts-node prisma/seed.ts"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.8.3",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.4.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "winston": "^3.8.2",
+    "zod": "^3.19.1"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.ts"
   }
 }
