--- a/week-2-wide-perspective/w02e05-simple-server-side/package.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/package.json
@@ -1,6 +1,23 @@
 {
   "name": "w02e05-simple-server-side",
   "version": "1.0.0",
+  "scripts": {
+    "dev": "nodemon ./src/main.ts",
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "express-json-validator-middleware": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.3",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
