--- a/week-2-wide-perspective/w02e05-simple-server-side/package.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/package.json
@@ -2,14 +2,16 @@
   "name": "w02e05-simple-server-side",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon ./src/main.ts",
-    "seed": "ts-node prisma/seed.ts"
+    "dev": "env-cmd nodemon ./src/main.ts",
+    "seed": "env-cmd ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
     "bcrypt": "^5.1.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
-    "express-json-validator-middleware": "^3.0.1"
+    "express-json-validator-middleware": "^3.0.1",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
